--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18706,6 +18706,10 @@ html[data-bs-theme=dark] .auth-brand .logo-dark {
   text-align: left !important;
 }
 
+.male-radio {
+  margin-left: 10px;
+}
+
 .rating-css input {
   display: none;
 }
