--- a/public/source/scss/custom/pages/_userManagement.scss
+++ b/public/source/scss/custom/pages/_userManagement.scss
@@ -1,9 +1,13 @@
-.buttonLink{
-    outline: none;
-    background: none;
-    border: none;
-    width: 100%;
-    padding: none;
-    margin: none;
-    text-align: left !important;
+.buttonLink {
+	outline: none;
+	background: none;
+	border: none;
+	width: 100%;
+	padding: none;
+	margin: none;
+	text-align: left !important;
 }
+.male-radio{
+    margin-left: 10px;
+}
+
